--- a/date/2024-11/page-4.htm
+++ b/date/2024-11/page-4.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
     	<link rel="canonical" href="https://clashgithub.github.io" />
@@ -18,6 +18,23 @@
     <meta property="og:title" content="2024-11归档 - 第3页 - Clash Github官方机场站" />
     <meta property="og:image" content="/assets/website/img/clashgithub/favicon.ico" />
         <meta property="og:description" content="2024-11归档，当前是第3页" />
+    
+    <meta name="applicable-device" content="pc,mobile" />
+    <meta name="renderer" content="webkit" />
+    <meta name="force-rendering" content="webkit" />
+    <meta http-equiv="Cache-Control" content="no-transform" />
+    <meta name="robots" content="max-image-preview:large" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="2024-11归档 - 第3页 - Clash Github官方机场站">
+    <meta name="format-detection" content="telephone=no">
+
+    <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
+    <link rel="dns-prefetch" href="https://www.googleadservices.com">
+    <link rel="dns-prefetch" href="https://www.google-analytics.com">
+    <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com">
+    <link rel="dns-prefetch" href="https://cm.g.doubleclick.net">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
         
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 			function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -158,16 +175,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-38790.htm" title="动物美容院由谁监管（动物美容院由谁监管的）">动物美容院由谁监管（动物美容院由谁监管的）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-29-free-clash.htm" title="12月29日→20.1M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">12月29日→20.1M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-25-free-node-subscribe.htm" title="10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-21795.htm" title="天津狗狗领养吧 天津狗狗领养吧最新消息">天津狗狗领养吧 天津狗狗领养吧最新消息</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-18-clash-windows.htm" title="10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-25955.htm" title="领养宠物签的合同到底有用吗知乎 领养宠物签的合同到底有用吗知乎文章">领养宠物签的合同到底有用吗知乎 领养宠物签的合同到底有用吗知乎文章</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-7-node-share.htm" title="10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-40761.htm" title="宠物领养平台的设计与实现研究现状（宠物领养系统国内外现状）">宠物领养平台的设计与实现研究现状（宠物领养系统国内外现状）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-24-free-subscribe-node.htm" title="11月24日→20.7M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月24日→20.7M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-18-free-high-speed-nodes.htm" title="1月18日→21.1M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">1月18日→21.1M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-38295.htm" title="宠物店一年利润怎么样有人开吗知乎（宠物店一个月利润怎么样）">宠物店一年利润怎么样有人开吗知乎（宠物店一个月利润怎么样）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-16-free-high-speed-nodes.htm" title="1月16日→18M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">1月16日→18M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-25956.htm" title="猫咪驱虫费用（猫咪驱虫多少钱一次?）">猫咪驱虫费用（猫咪驱虫多少钱一次?）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-5-free-clash.htm" title="12月5日→19M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月5日→19M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-10-free-v2ray.htm" title="10月10日→19.1M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">10月10日→19.1M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-25483.htm" title="免费领养宠物正规网站推荐（免费领养宠物正规网站推荐下载）">免费领养宠物正规网站推荐（免费领养宠物正规网站推荐下载）</a></li>
+                        <li class="py-2"><a href="/news/article-36349.htm" title="宠物之家托运好不好（宠物之家在哪里）">宠物之家托运好不好（宠物之家在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-31587.htm" title="宠物狗领养免费（宠物犬免费领养）">宠物狗领养免费（宠物犬免费领养）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-16-free-node-subscribe-links.htm" title="12月16日→20.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">12月16日→20.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-22724.htm" title="开宠物用品店挣钱吗知乎推荐（开宠物用品店货源）">开宠物用品店挣钱吗知乎推荐（开宠物用品店货源）</a></li>
                     </ul>
     </div>
 </div>
@@ -179,7 +196,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
